Fixed Openapi Added CarPlate Validation Fixed Issues
